--- a/src/assets/styles/_banner.scss
+++ b/src/assets/styles/_banner.scss
@@ -1,41 +1,40 @@
 @use "./variables" as *;
 
 .banner {
-  margin-top: $navbar-heigth;
-  padding-top: 9vh;
+  padding-top: 18vh;
   font-size: 2rem;
-}
 
-.banner__heading {
-  font-size: 6.4rem;
-  color: #dedede;
-  margin-bottom: 7%;
-}
+  &__heading {
+    font-size: 6.4rem;
+    color: #dedede;
+    margin-bottom: 7%;
+  }
 
-.banner__spec {
-  font-size: 2.4rem;
-  color: #959595;
-}
+  &__spec {
+    font-size: 2.4rem;
+    color: #959595;
+  }
 
-.banner__avatar {
-  position: relative;
-  border-radius: 50%;
-}
-
-@media (min-width: 768px) {
-  .banner__shape {
+  &__avatar {
     position: relative;
-    &::before {
-      content: "";
-      position: absolute;
-      max-width: 400px;
-      width: 100%;
-      height: 100%;
-      background-color: #dedede;
-      left: 20%;
-      border: 1px solid #dedede;
-      border-radius: 50%;
-      opacity: 90%;
+    border-radius: 50%;
+  }
+
+  @media (min-width: 768px) {
+    &__shape {
+      position: relative;
+      &::before {
+        content: "";
+        position: absolute;
+        max-width: 400px;
+        width: 100%;
+        height: 100%;
+        background-color: #dedede;
+        left: 20%;
+        border: 1px solid #dedede;
+        border-radius: 50%;
+        opacity: 90%;
+      }
     }
   }
 }
