--- a/src/assets/styles/_navBar.scss
+++ b/src/assets/styles/_navBar.scss
@@ -3,66 +3,67 @@
 .navbar {
   background-color: rgb(50, 50, 50, 0.5);
   transition: all 0.2s ease;
-}
-.navbar--bgColor {
-  background-color: rgb(50, 50, 50);
-}
 
-.navbar__brand {
-  color: $text-light-color;
-}
-
-.navbar__link {
-  position: relative;
-  margin-left: 5%;
-  color: $text-light-color;
-  font-size: 2rem;
-  line-height: 7rem;
-  transition: all linear 0.2s;
-
-  &::after {
-    position: absolute;
-    background-color: $text-light-color;
-    bottom: 0;
-    left: 50%;
-    content: "";
-    height: 5px;
-    width: 0%;
-    transition: all linear 0.2s;
+  &--bgColor {
+    background-color: rgb(50, 50, 50);
   }
 
-  &:hover {
-    color: $text-light-color !important;
-    opacity: 0.8;
+  &__brand {
+    color: $text-light-color;
+  }
+
+  &__link {
+    position: relative;
+    margin-left: 5%;
+    color: $text-light-color;
+    font-size: 2rem;
+    line-height: 7rem;
+    transition: all linear 0.2s;
+
     &::after {
+      position: absolute;
+      background-color: $text-light-color;
+      bottom: 0;
+      left: 50%;
+      content: "";
+      height: 5px;
+      width: 0%;
+      transition: all linear 0.2s;
+    }
+
+    &:hover {
+      color: $text-light-color !important;
+      opacity: 0.8;
+      &::after {
+        width: 100%;
+        left: 0;
+      }
+    }
+  }
+
+  &__link--active {
+    color: $text-light-color;
+
+    &::after {
+      background-color: red;
       width: 100%;
       left: 0;
     }
   }
-}
 
-.navbar__link--active {
-  color: $text-light-color;
-
-  &::after {
-    background-color: red;
-    width: 100%;
-    left: 0;
+  &__button {
+    border: none;
+    &:focus {
+      box-shadow: none;
+    }
   }
-}
 
-.navbar__button {
-  border: none;
-  &:focus {
-    box-shadow: none;
+  &__icon {
+    color: $text-light-color;
+    font-size: $icon-font-size;
   }
-}
 
-.navbar__icon {
-  color: $text-light-color;
-  font-size: $icon-font-size;
-}
-
-.navbar__link.active {
-  color: #fff !important;
+  &__link.active {
+    color: #fff !important;
+  }
 }
