--- a/src/assets/styles/_navBar.scss
+++ b/src/assets/styles/_navBar.scss
@@ -4,7 +4,7 @@
   background-color: rgb(50, 50, 50, 0.5);
   transition: all 0.2s ease;
 
-  &--bgColor {
+  &--bgColorSolid {
     background-color: rgb(50, 50, 50);
   }
 
