--- a/src/assets/styles/_projectItem.scss
+++ b/src/assets/styles/_projectItem.scss
@@ -11,3 +11,33 @@
         object-fit: fill;
     }
 }
+
+.modal {
+    &__content {
+        border-radius: 30px;
+        background-color: transparent;
+        border: none;
+    }
+
+    &__close-btn {
+        font-size: 2.5rem;
+        position: absolute;
+        top: 12px;
+        right: 12px;
+        border-radius: 15px;
+        transition: all 0.2s ease;
+
+        &:hover {
+            background-color: #181818;
+        }
+    }
+
+    @media screen and (max-width: 991px) {
+        &__close-btn {
+            font-size: 3rem;
+            top: 20px;
+            right: 20px;
+            background-color: #181818;
+        }
+    }
+}
