--- a/src/App.scss
+++ b/src/App.scss
@@ -29,7 +29,7 @@ body {
   background-color: #202020;
   font-size: $default-font-size;
   font-family: "Lexend Deca", sans-serif !important;
-  overflow: overlay;
+  // overflow: overlay;
 }
 
 ::-webkit-scrollbar {
