--- a/src/assets/styles/_contact.scss
+++ b/src/assets/styles/_contact.scss
@@ -9,9 +9,8 @@
     text-align: center;
   }
 
-  &__mailBtn {
-    min-width: 200px;
-    width: 50%;
+  &__mail-btn {
+    width: 100%;
     text-align: center;
     color: #dedede;
     background-color: #161b22;
@@ -25,11 +24,46 @@
       background-color: black;
       opacity: 0.8;
     }
+    @media screen and (max-width: 767px) {
+      width: 100%;
+    }
   }
 
-  &__mailIcon {
+  &__mail-icon {
     vertical-align: top;
     font-size: $icon-font-size;
     width: 50px;
+  }
+
+  &__img {
+    width: 90%;
+    filter: grayscale(1);
+    @media screen and (max-width: 991px) {
+      display: none;
+    }
+  }
+
+  &__toast-msg {
+    width: 100%;
+    background-color: #161b22;
+    border-radius: 10px;
+  }
+
+  &__toast-msg-header {
+    font-size: 1.7rem;
+    color: #dedede;
+    background-color: #161b22;
+    border-radius: 10px;
+
+    button {
+      filter: invert(100%);
+    }
+  }
+
+  .form {
+    &__input {
+      font-size: 1.8rem;
+      border-radius: 10px;
+    }
   }
 }
