--- a/src/assets/styles/_banner.scss
+++ b/src/assets/styles/_banner.scss
@@ -1,39 +1,58 @@
-@use "./variables" as *;
-
 .banner {
-  padding-top: 18vh;
-  font-size: 2rem;
+  padding-top: 15%;
 
   &__heading {
-    font-size: 6.4rem;
-    margin-bottom: 7%;
+    font-size: 6.2rem;
   }
 
   &__spec {
-    font-size: 2.4rem;
+    font-size: 2.2rem;
     color: #959595;
   }
 
   &__avatar {
-    position: relative;
+    max-width: 400px;
+    max-height: 400px;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
+    position: relative;
   }
 
   @media (min-width: 768px) {
     &__shape {
-      position: relative;
-      &::before {
-        content: "";
-        position: absolute;
-        max-width: 400px;
-        width: 100%;
-        height: 100%;
-        background-color: #dedede;
-        left: 20%;
-        border: 1px solid #dedede;
-        border-radius: 50%;
-        opacity: 90%;
-      }
+      content: "";
+      position: absolute;
+      position: absolute;
+      max-width: 400px;
+      max-height: 400px;
+      width: 100%;
+      height: 100%;
+      background-color: $light-color;
+      left: 20%;
+      border: none;
+      border-radius: 50%;
+      opacity: 90%;
+    }
+  }
+
+  @media (max-width: 992px) {
+    padding-top: 18%;
+  }
+
+  @media (max-width: 767px) {
+    padding-top: 28%;
+
+    &__heading {
+      font-size: 4rem;
+    }
+
+    &__spec {
+      font-size: 2rem;
+    }
+
+    &__avatar {
+      width: 80%;
     }
   }
 }
