--- a/src/assets/styles/_navBar.scss
+++ b/src/assets/styles/_navBar.scss
@@ -1,28 +1,38 @@
-@use "./variables" as *;
-
 .navbar {
   background-color: rgb(50, 50, 50, 0.5);
   transition: all 0.2s ease;
 
   &--bgColorSolid {
-    background-color: rgb(50, 50, 50);
+    background-color: rgb(50, 50, 50); // change background-color when sroll
   }
 
   &__brand {
-    color: $text-light-color;
+    color: $light-color;
+    @media only screen and (max-width: 767px) {
+      & svg {
+        width: 75%;
+        margin-left: 4px;
+      }
+    }
   }
 
   &__link {
     position: relative;
     margin-left: 5%;
-    color: $text-light-color;
+    color: $light-color;
     font-size: 2rem;
-    line-height: 7rem;
+    line-height: $navbar-heigth;
     transition: all linear 0.2s;
+    text-decoration: none;
+    @media only screen and (max-width: 767px) {
+      font-size: 1.8rem;
+      margin-left: 7%;
+      line-height: 65px;
+    }
 
     &::after {
       position: absolute;
-      background-color: $text-light-color;
+      background-color: $light-color;
       bottom: 0;
       left: 50%;
       content: "";
@@ -32,22 +42,12 @@
     }
 
     &:hover {
-      color: $text-light-color !important;
+      color: $light-color !important;
       opacity: 0.8;
       &::after {
         width: 100%;
         left: 0;
       }
-    }
-  }
-
-  &__link--active {
-    color: $text-light-color;
-
-    &::after {
-      background-color: red;
-      width: 100%;
-      left: 0;
     }
   }
 
@@ -59,11 +59,11 @@
   }
 
   &__icon {
-    color: $text-light-color;
+    color: $light-color;
     font-size: $icon-font-size;
   }
 
-  &__link.active {
+  .active {
     color: #fff !important;
   }
 }
