--- a/src/assets/styles/_projectItem.scss
+++ b/src/assets/styles/_projectItem.scss
@@ -1,5 +1,3 @@
-@use "./variables" as *;
-
 .project-item {
     &__heading {
         text-align: center;
@@ -9,6 +7,12 @@
         width: 100%;
         border-radius: 1.5rem;
         object-fit: fill;
+        filter: grayscale(1);
+        transition: all 0.3s ease;
+
+        &:hover {
+            filter: grayscale(0);
+        }
     }
 }
 
@@ -25,6 +29,7 @@
         top: 12px;
         right: 12px;
         border-radius: 15px;
+        color: $light-color;
         transition: all 0.2s ease;
 
         &:hover {
