--- a/src/assets/styles/_projectItemDetails.scss
+++ b/src/assets/styles/_projectItemDetails.scss
@@ -1,7 +1,11 @@
-@use "./variables" as *;
-
 .project-item-details {
-  color: #dedede;
+  color: $light-color;
+
+  &__img {
+    width: 100%;
+    border-radius: 1.5rem;
+    object-fit: fill;
+  }
 
   &__details {
     height: 100%;
@@ -22,25 +26,11 @@
   }
 
   &__gitBtn {
-    text-align: center;
-    text-decoration: none;
-    color: #dedede;
     display: inline-block;
     padding: 10px 10px 10px 0;
     min-width: 160px;
     width: 25%;
-    background-color: #161b22;
-    font-size: $button-font-size;
     margin-right: 5%;
-    transition: all 0.2s linear;
-    border: none;
-    border-radius: 15px;
-
-    &:hover {
-      color: white;
-      background-color: black;
-      opacity: 0.8;
-    }
   }
 
   &__gitIcon {
@@ -50,23 +40,18 @@
   }
 
   &__demoBtn {
-    width: 20%;
+    width: 15%;
     text-align: right;
     text-decoration: none;
-    color: #dedede;
+    color: $light-color;
     display: inline-block;
     font-size: 3.3rem;
     background-color: transparent;
     transition: all 0.2s linear;
+
     &:hover {
-      color: black;
+      color: #000;
       opacity: 0.8;
     }
-  }
-
-  &__img {
-    width: 100%;
-    border-radius: 1.5rem;
-    object-fit: fill;
   }
 }
