--- a/src/assets/styles/_projectsList.scss
+++ b/src/assets/styles/_projectsList.scss
@@ -1,20 +1,24 @@
-@use "./variables" as *;
-
 .experiences {
-  padding-top: 18vh;
+  padding-top: $section-padding-top;
+
   .projects-list {
     margin-bottom: 5%;
+
     &__year {
       display: block;
       font-size: $year-font-size;
-      color: #dedede;
+      color: $light-color;
     }
 
     &__break-line {
       width: 100%;
-      background-color: #dedede;
+      background-color: $light-color;
       height: 5px;
     }
+  }
+
+  .projects-list:last-child {
+    margin-bottom: 0;
   }
 }
 
@@ -23,13 +27,13 @@
   z-index: 1;
   top: 42%;
   transform: translateY(-50%);
-  color: #dedede;
+  color: $light-color;
   width: 40px;
   height: 40px;
   border-radius: 50%;
   border: none;
   font-size: 2.5rem;
-  background-color: #2c2c2c;
+  background-color: $dark-primary-color;
   transition: all 0.2s ease;
   cursor: pointer;
 
@@ -67,6 +71,7 @@
   &--next {
     transform: translate(1px, -2px);
   }
+
   &--prev {
     transform: translate(-1px, -2px);
   }
@@ -77,10 +82,12 @@
     text-align: center;
     margin-top: 0.6rem;
   }
+
   &-bullet {
     display: inline-block;
     background-color: #7c7c7c;
     transition: all 0.2s ease;
+
     &-active {
       width: 15px;
       border-radius: 5px;
