--- a/src/assets/styles/_skills.scss
+++ b/src/assets/styles/_skills.scss
@@ -1,5 +1,5 @@
 .skills {
-  padding-top: 18vh;
+  padding-top: $section-padding-top;
 
   &__item {
     padding: 2rem 1.5rem;
@@ -14,10 +14,12 @@
   & img {
     width: 40%;
   }
-}
 
-@media only screen and (max-width: 767px) {
-  .skills {
-    font-size: 1.4rem;
+  @media only screen and (max-width: 767px) {
+    font-size: 1.5rem;
+
+    & img {
+      width: 50%;
+    }
   }
 }
