--- a/src/assets/styles/_banner.scss
+++ b/src/assets/styles/_banner.scss
@@ -10,6 +10,10 @@
     color: #959595;
   }
 
+  &__spec.light {
+    color: #646464;
+  }
+
   &__avatar {
     max-width: 400px;
     max-height: 400px;
