--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -3,7 +3,7 @@ $btn-color: #161919;
 $dark-primary-color: #2c2c2c;
 $light-color: #dedede;
 $dark-color: #202020;
-$section-padding-top: 13.2%;
+$section-padding-top: 20.2vh;
 @media only screen and (max-width: 767px) {
     $section-padding-top: 22%;
     #about,
