--- a/src/assets/styles/_contact.scss
+++ b/src/assets/styles/_contact.scss
@@ -14,7 +14,7 @@
   &__mail-btn {
     width: 100%;
 
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: $max-width-small) {
       width: 100%;
     }
   }
@@ -28,7 +28,7 @@
   &__img {
     width: 78%;
     filter: grayscale(1);
-    @media screen and (max-width: 991px) {
+    @media screen and (max-width: $max-width-medium) {
       display: none;
     }
   }
