--- a/src/assets/styles/_navBar.scss
+++ b/src/assets/styles/_navBar.scss
@@ -7,7 +7,7 @@
   }
 
   &__brand {
-    @media only screen and (max-width: 767px) {
+    @media only screen and (max-width: $max-width-small) {
       & svg {
         width: 75%;
         margin-left: 4px;
@@ -29,7 +29,7 @@
     -webkit-user-select: none;
     -moz-user-select: none;
 
-    @media only screen and (max-width: 767px) {
+    @media only screen and (max-width: $max-width-small) {
       font-size: 1.8rem;
       margin-left: 7%;
       line-height: 65px;
@@ -53,22 +53,6 @@
         width: 100%;
         left: 0;
       }
-    }
-  }
-
-  &__theme-btn {
-    margin-left: 5%;
-    color: $light-color;
-    font-size: 2.5rem;
-    cursor: pointer;
-    transition: all 0.3s ease;
-
-    &:hover {
-      opacity: 0.8;
-    }
-
-    @media only screen and (max-width: 767px) {
-      margin-left: 7%;
     }
   }
 
@@ -110,10 +94,6 @@
     &:hover {
       color: $dark-color !important;
     }
-  }
-
-  &__theme-btn {
-    color: $dark-color;
   }
 
   &__icon {
