--- a/src/assets/styles/_projectsList.scss
+++ b/src/assets/styles/_projectsList.scss
@@ -58,7 +58,7 @@
     }
   }
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: $max-width-small) {
     display: none;
   }
 }
